{
  "version": 4,
  "terraform_version": "1.6.4",
  "serial": 1511,
  "lineage": "880443e7-ee7a-b603-0816-1b9332745a7c",
  "resources": [
    {
      "module": "module.mysql_sg",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:730054542356:security-group/sg-06a734fcd964f624f",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-06a734fcd964f624f",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "mysql-sg",
            "name_prefix": "",
            "owner_id": "730054542356",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-019d7515162fee9ce"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.example"
          ]
        }
      ]
    },
    {
      "module": "module.mysql_sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "egress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "",
            "from_port": 0,
            "id": "sgrule-1001498163",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-06a734fcd964f624f",
            "security_group_rule_id": "sgr-0f64f646c862101a1",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.mysql_sg.aws_security_group.default",
            "module.vpc.aws_vpc.example"
          ]
        }
      ]
    },
    {
      "module": "module.mysql_sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ingress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "10.0.0.0/16"
            ],
            "description": "",
            "from_port": 3306,
            "id": "sgrule-411610425",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-06a734fcd964f624f",
            "security_group_rule_id": "sgr-06e2886986faa6907",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 3306,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.mysql_sg.aws_security_group.default",
            "module.vpc.aws_vpc.example"
          ]
        }
      ]
    },
    {
      "module": "module.redis_sg",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:730054542356:security-group/sg-04d2af2751c78b9c5",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-04d2af2751c78b9c5",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "",
                "from_port": 6379,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 6379
              }
            ],
            "name": "redis-sg",
            "name_prefix": "",
            "owner_id": "730054542356",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-019d7515162fee9ce"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.example"
          ]
        }
      ]
    },
    {
      "module": "module.redis_sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "egress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "",
            "from_port": 0,
            "id": "sgrule-3517796587",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-04d2af2751c78b9c5",
            "security_group_rule_id": "sgr-00558de324ea4e4c2",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.redis_sg.aws_security_group.default",
            "module.vpc.aws_vpc.example"
          ]
        }
      ]
    },
    {
      "module": "module.redis_sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ingress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "10.0.0.0/16"
            ],
            "description": "",
            "from_port": 6379,
            "id": "sgrule-3281664589",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-04d2af2751c78b9c5",
            "security_group_rule_id": "sgr-09cd00c0d9619b65c",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 6379,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.redis_sg.aws_security_group.default",
            "module.vpc.aws_vpc.example"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0bc5567a23041e395",
            "association_id": "eipassoc-0d074c105bcd2c05a",
            "domain": "vpc",
            "id": "eipalloc-0bc5567a23041e395",
            "network_border_group": "ap-northeast-1",
            "network_interface": "eni-0c566b182ddbf5fb5",
            "private_dns": "ip-10-0-0-103.ap-northeast-1.compute.internal",
            "private_ip": "10.0.0.103",
            "public_dns": "ec2-18-180-200-38.ap-northeast-1.compute.amazonaws.com",
            "public_ip": "18.180.200.38",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.example",
            "module.vpc.aws_vpc.example"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat_gateway_0",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-07173057ef16f51a6",
            "association_id": "eipassoc-075bc416a5761d5e4",
            "domain": "vpc",
            "id": "eipalloc-07173057ef16f51a6",
            "network_border_group": "ap-northeast-1",
            "network_interface": "eni-0ee342f7793cd7f21",
            "private_dns": "ip-10-0-1-158.ap-northeast-1.compute.internal",
            "private_ip": "10.0.1.158",
            "public_dns": "ec2-35-74-191-228.ap-northeast-1.compute.amazonaws.com",
            "public_ip": "35.74.191.228",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.example",
            "module.vpc.aws_vpc.example"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat_gateway_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0a366dfbc98729e68",
            "association_id": "eipassoc-08d7b60be2987ce3b",
            "domain": "vpc",
            "id": "eipalloc-0a366dfbc98729e68",
            "network_border_group": "ap-northeast-1",
            "network_interface": "eni-0079b6615b4fadc86",
            "private_dns": "ip-10-0-2-98.ap-northeast-1.compute.internal",
            "private_ip": "10.0.2.98",
            "public_dns": "ec2-18-182-201-236.ap-northeast-1.compute.amazonaws.com",
            "public_ip": "18.182.201.236",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.example",
            "module.vpc.aws_vpc.example"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "example",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:730054542356:internet-gateway/igw-0fea1936b307ad4a2",
            "id": "igw-0fea1936b307ad4a2",
            "owner_id": "730054542356",
            "vpc_id": "vpc-019d7515162fee9ce"
          },
          "dependencies": [
            "module.vpc.aws_vpc.example"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "example",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0bc5567a23041e395",
            "association_id": "eipassoc-0d074c105bcd2c05a",
            "connectivity_type": "public",
            "id": "nat-0fb1621d40d15dea2",
            "network_interface_id": "eni-0c566b182ddbf5fb5",
            "private_ip": "10.0.0.103",
            "public_ip": "18.180.200.38",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-048a658e75eda1510"
          },
          "dependencies": [
            "module.vpc.aws_eip.nat_gateway",
            "module.vpc.aws_internet_gateway.example",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.example"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat_gateway_0",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-07173057ef16f51a6",
            "association_id": "eipassoc-075bc416a5761d5e4",
            "connectivity_type": "public",
            "id": "nat-04f807cf2595e0add",
            "network_interface_id": "eni-0ee342f7793cd7f21",
            "private_ip": "10.0.1.158",
            "public_ip": "35.74.191.228",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-04b9ca01eba10f555"
          },
          "dependencies": [
            "module.vpc.aws_eip.nat_gateway_0",
            "module.vpc.aws_internet_gateway.example",
            "module.vpc.aws_subnet.public_0",
            "module.vpc.aws_vpc.example"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat_gateway_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0a366dfbc98729e68",
            "association_id": "eipassoc-08d7b60be2987ce3b",
            "connectivity_type": "public",
            "id": "nat-04b763c38f7b00db7",
            "network_interface_id": "eni-0079b6615b4fadc86",
            "private_ip": "10.0.2.98",
            "public_ip": "18.182.201.236",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0046613c355305928"
          },
          "dependencies": [
            "module.vpc.aws_eip.nat_gateway_1",
            "module.vpc.aws_internet_gateway.example",
            "module.vpc.aws_subnet.public_1",
            "module.vpc.aws_vpc.example"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-02d790b8be0fdc0401080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0fb1621d40d15dea2",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-02d790b8be0fdc040",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_eip.nat_gateway",
            "module.vpc.aws_internet_gateway.example",
            "module.vpc.aws_nat_gateway.example",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.example"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_0",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0d9ffbdf9a76819aa1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-04f807cf2595e0add",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0d9ffbdf9a76819aa",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_eip.nat_gateway_0",
            "module.vpc.aws_internet_gateway.example",
            "module.vpc.aws_nat_gateway.nat_gateway_0",
            "module.vpc.aws_route_table.private_0",
            "module.vpc.aws_subnet.public_0",
            "module.vpc.aws_vpc.example"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0ded44b5c70d76c3c1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-04b763c38f7b00db7",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0ded44b5c70d76c3c",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_eip.nat_gateway_1",
            "module.vpc.aws_internet_gateway.example",
            "module.vpc.aws_nat_gateway.nat_gateway_1",
            "module.vpc.aws_route_table.private_1",
            "module.vpc.aws_subnet.public_1",
            "module.vpc.aws_vpc.example"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0fea1936b307ad4a2",
            "id": "r-rtb-08df666884de0ecd71080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-08df666884de0ecd7",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.example",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_vpc.example"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:730054542356:route-table/rtb-02d790b8be0fdc040",
            "id": "rtb-02d790b8be0fdc040",
            "owner_id": "730054542356",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0fb1621d40d15dea2",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-019d7515162fee9ce"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.example"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_0",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:730054542356:route-table/rtb-0d9ffbdf9a76819aa",
            "id": "rtb-0d9ffbdf9a76819aa",
            "owner_id": "730054542356",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-04f807cf2595e0add",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-019d7515162fee9ce"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.example"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:730054542356:route-table/rtb-0ded44b5c70d76c3c",
            "id": "rtb-0ded44b5c70d76c3c",
            "owner_id": "730054542356",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-04b763c38f7b00db7",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-019d7515162fee9ce"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.example"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:730054542356:route-table/rtb-08df666884de0ecd7",
            "id": "rtb-08df666884de0ecd7",
            "owner_id": "730054542356",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0fea1936b307ad4a2",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-019d7515162fee9ce"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.example"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0722309e96f2c67d9",
            "route_table_id": "rtb-02d790b8be0fdc040",
            "subnet_id": "subnet-08d91c179d528623f"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.example"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_0",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-00c99d0b489c20061",
            "route_table_id": "rtb-0d9ffbdf9a76819aa",
            "subnet_id": "subnet-0dd3317b44862f8aa"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private_0",
            "module.vpc.aws_subnet.private_0",
            "module.vpc.aws_vpc.example"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0949943f632e2cb9c",
            "route_table_id": "rtb-0ded44b5c70d76c3c",
            "subnet_id": "subnet-060d5109be1b79a1a"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private_1",
            "module.vpc.aws_subnet.private_1",
            "module.vpc.aws_vpc.example"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c6da10b4da82bcbb",
            "route_table_id": "rtb-08df666884de0ecd7",
            "subnet_id": "subnet-048a658e75eda1510"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.example"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_0",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b8d9668f9881378e",
            "route_table_id": "rtb-08df666884de0ecd7",
            "subnet_id": "subnet-04b9ca01eba10f555"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public_0",
            "module.vpc.aws_vpc.example"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ecf6bbb236751caa",
            "route_table_id": "rtb-08df666884de0ecd7",
            "subnet_id": "subnet-0046613c355305928"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public_1",
            "module.vpc.aws_vpc.example"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "example",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:730054542356:security-group/sg-074240396b06ddb69",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-074240396b06ddb69",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "example",
            "name_prefix": "",
            "owner_id": "730054542356",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-019d7515162fee9ce"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.example"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "egress_example",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "",
            "from_port": 0,
            "id": "sgrule-2592955672",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-074240396b06ddb69",
            "security_group_rule_id": "sgr-0e034bf9677a1c56b",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_security_group.example",
            "module.vpc.aws_vpc.example"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ingress_example",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "",
            "from_port": 80,
            "id": "sgrule-789044837",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-074240396b06ddb69",
            "security_group_rule_id": "sgr-07b9601ff58a3ae6a",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 80,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_security_group.example",
            "module.vpc.aws_vpc.example"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:730054542356:subnet/subnet-08d91c179d528623f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1a",
            "availability_zone_id": "apne1-az4",
            "cidr_block": "10.0.64.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-08d91c179d528623f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "730054542356",
            "private_dns_hostname_type_on_launch": "ip-name",
            "vpc_id": "vpc-019d7515162fee9ce"
          },
          "dependencies": [
            "module.vpc.aws_vpc.example"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_0",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:730054542356:subnet/subnet-0dd3317b44862f8aa",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1a",
            "availability_zone_id": "apne1-az4",
            "cidr_block": "10.0.65.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0dd3317b44862f8aa",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "730054542356",
            "private_dns_hostname_type_on_launch": "ip-name",
            "vpc_id": "vpc-019d7515162fee9ce"
          },
          "dependencies": [
            "module.vpc.aws_vpc.example"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:730054542356:subnet/subnet-060d5109be1b79a1a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1c",
            "availability_zone_id": "apne1-az1",
            "cidr_block": "10.0.66.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-060d5109be1b79a1a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "730054542356",
            "private_dns_hostname_type_on_launch": "ip-name",
            "vpc_id": "vpc-019d7515162fee9ce"
          },
          "dependencies": [
            "module.vpc.aws_vpc.example"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:730054542356:subnet/subnet-048a658e75eda1510",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1a",
            "availability_zone_id": "apne1-az4",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-048a658e75eda1510",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "730054542356",
            "private_dns_hostname_type_on_launch": "ip-name",
            "vpc_id": "vpc-019d7515162fee9ce"
          },
          "dependencies": [
            "module.vpc.aws_vpc.example"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_0",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:730054542356:subnet/subnet-04b9ca01eba10f555",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1a",
            "availability_zone_id": "apne1-az4",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-04b9ca01eba10f555",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "730054542356",
            "private_dns_hostname_type_on_launch": "ip-name",
            "vpc_id": "vpc-019d7515162fee9ce"
          },
          "dependencies": [
            "module.vpc.aws_vpc.example"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:730054542356:subnet/subnet-0046613c355305928",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1c",
            "availability_zone_id": "apne1-az1",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0046613c355305928",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "730054542356",
            "private_dns_hostname_type_on_launch": "ip-name",
            "vpc_id": "vpc-019d7515162fee9ce"
          },
          "dependencies": [
            "module.vpc.aws_vpc.example"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "example",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:730054542356:vpc/vpc-019d7515162fee9ce",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0e4cd8dacf2ae7c0e",
            "default_route_table_id": "rtb-0f73641a6916c1a4a",
            "default_security_group_id": "sg-0bca9a2e470bd630e",
            "dhcp_options_id": "dopt-0180ecb3fda502724",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-019d7515162fee9ce",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0f73641a6916c1a4a",
            "owner_id": "730054542356",
            "tags": {
              "Name": "example"
            },
            "tags_all": {
              "Name": "example"
            }
          }
        }
      ]
    },
    {
      "module": "module.vpc.module.example_sg",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:730054542356:security-group/sg-0c43a8b515a7d4d6c",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0c43a8b515a7d4d6c",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "module-sg",
            "name_prefix": "",
            "owner_id": "730054542356",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-019d7515162fee9ce"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.example"
          ]
        }
      ]
    },
    {
      "module": "module.vpc.module.example_sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "egress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "",
            "from_port": 0,
            "id": "sgrule-3207848206",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-0c43a8b515a7d4d6c",
            "security_group_rule_id": "sgr-05327cc6fe71665d7",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.example",
            "module.vpc.module.example_sg.aws_security_group.default"
          ]
        }
      ]
    },
    {
      "module": "module.vpc.module.example_sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ingress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "",
            "from_port": 80,
            "id": "sgrule-1541869932",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0c43a8b515a7d4d6c",
            "security_group_rule_id": "sgr-05d017e105534b02a",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 80,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.example",
            "module.vpc.module.example_sg.aws_security_group.default"
          ]
        }
      ]
    }
  ]
}